# llmops-learning

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENCE.txt  MLproject  README.md  docker-compose.yml  invoke.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feat-request.md  fix-request.md
.github/workflows/: check.yml  publish.yml
confs/: ai_gateway.yaml  deployment.yaml  feature_eng.yaml  generate_rag_dataset.yaml  monitoring.yaml  rag_chain_config.yaml
data/datasets/: rag_dataset.csv  rag_dataset.json
serving_endpoint/: Dockerfile  README.md  client.py  example.env  requirements.txt  server.py
serving_endpoint/ecs/: Makefile  README.md  deploy-image-to-ecs.sh
serving_endpoint/ecs/infra/app/: terraform.tfstate.backup
serving_endpoint/ecs/infra/app/ecs/: main.tf
src/llmops_project/: __init__.py  __main__.py  scripts.py  settings.py
src/llmops_project/io/: services.py  vector_db.py
src/llmops_project/models/: chatbot_with_guardrails.py  rag_chatbot.py
src/llmops_project/pipelines/: __init__.py  base.py
src/llmops_project/pipelines/deployment/: deploy_model.py  register_model.py
src/llmops_project/pipelines/feature_engineering/: create_vector_db.py  ingest_documents.py
src/llmops_project/pipelines/managers/: deployment_manager.py  feature_engineering_manager.py  monitoring_manager.py
src/llmops_project/pipelines/monitoring/: generate_rag_dataset.py  post_deploy_eval.py  pre_deploy_eval.py
tasks/: __init__.py  checks.py  commits.py  serve.py
tests/: conftest.py  test_scripts.py
tests/confs/invalid/: 0. invalid.yaml
tests/confs/valid/: 0. feature_engineering.yaml  1. deployment.yaml  2. monitoring.yaml
tests/io/: test_configs.py  test_services.py
tests/pipelines/: test_base.py
tests/pipelines/deployment/: test_deploy_model.py  test_register_model.py
tests/pipelines/feature_engineering/: test_create_vector_db.py  test_ingest_documents.py
tests/pipelines/monitoring/: test_generate_rag_dataset.py  test_pre_deploy_eval.py
